GRAD2-2023: course with leftover credits is fixed to get the right credits used for grad.
GRAD2-2023: course with leftover credits is fixed to get the right credits used for grad.